--- a/Ex04.md
+++ b/Ex04.md
@@ -1,7 +1,7 @@
 # Ex. No : 4	
 # RECOGNITION OF A VALID VARIABLE WHICH STARTS WITH A LETTER FOLLOWED BY ANY NUMBER OF LETTERS OR DIGITS USING YACC
-## Register Number :
-## Date : 
+## Register Number :212223040157
+## Date : 9.5.2025
 
 ## AIM   
 To write a YACC program to recognize a valid variable which starts with a letter followed by any number of letters or digits.
@@ -17,9 +17,58 @@ To write a YACC program to recognize a valid variable which starts with a letter
 8.	Enter a statement as input and the valid variables are identified as output.
 
 ## PROGRAM
+```
+#include <stdio.h>
+#include <ctype.h>
+#include <string.h>
 
+// List of reserved keywords
+const char *keywords[] = {"int", "float", "double"};
+int isKeyword(const char *str) {
+    for (int i = 0; i < 3; i++) {
+        if (strcmp(str, keywords[i]) == 0)
+            return 1;
+    }
+    return 0;
+}
+
+// Function to check if variable name is valid
+int isValidVariable(const char *str) {
+    if (!isalpha(str[0])) // Must start with a letter
+        return 0;
+
+    for (int i = 1; str[i] != '\0'; i++) {
+        if (!isalnum(str[i])) // Only letters and digits allowed
+            return 0;
+    }
+
+    if (isKeyword(str)) // Should not be a keyword
+        return 0;
+
+    return 1;
+}
+
+int main() {
+    char var[100];
+    printf("Enter a variable name: ");
+    scanf("%s", var);
+
+    if (isValidVariable(var))
+        printf("Valid variable name.\n");
+    else
+        printf("Invalid variable name.\n");
+
+    return 0;
+}
+```
 
 ## OUTPUT 
+valid variable
+![image](https://github.com/user-attachments/assets/9c52cbb7-c79a-49a6-a2b1-4478b7ee00f4)
+invalid variable
+![image](https://github.com/user-attachments/assets/47058993-5cf4-4eee-b026-818895ed7fbf)
+
+
 
 ## RESULT
 A  YACC program to recognize a valid variable which starts with a letter followed by any number of letters or digits is executed successfully and the output is verified.
