--- a/Ex04.md
+++ b/Ex04.md
@@ -63,9 +63,13 @@ int main() {
 ```
 
 ## OUTPUT 
-valid variable
+
+###valid variable
+
 ![image](https://github.com/user-attachments/assets/9c52cbb7-c79a-49a6-a2b1-4478b7ee00f4)
-invalid variable
+
+##invalid variable
+
 ![image](https://github.com/user-attachments/assets/47058993-5cf4-4eee-b026-818895ed7fbf)
 
 
