--- a/Ex06.md
+++ b/Ex06.md
@@ -1,7 +1,7 @@
 # Ex. No : 6	
 # IMPLEMENTATION OF THE BACK END OF THE COMPILER 
-## Register Number :
-## Date : 
+## Register Number :212223040157
+## Date : 08.5.25
 
 ## AIM   
 To write a program to implement the back end of the compiler.
@@ -15,9 +15,49 @@ To write a program to implement the back end of the compiler.
 6.	Stop the program.
 
 ## PROGRAM
+```
+#include <stdio.h>
+#include <ctype.h> 
+#include <stdlib.h>
+
+int main() {
+int i = 2, j = 0, k = 2, k1 = 0; char ip[10], kk[10];
+FILE *fp;
+
+printf("Enter the filename of the intermediate code: "); scanf("%s", kk);
+
+fp = fopen(kk, "r"); if (fp == NULL) {
+printf("\nError in opening the file\n"); return 1;
+}
+printf("\nStatement\tTarget Code\n\n"); while (fscanf(fp, "%s", ip) != EOF) {
+printf("%s\tMOV %c,R%d SUB ", ip, ip[i + k], j);
+
+if (ip[i + 1] == '+')
+printf("ADD "); else
+printf("SUB ");
+
+if (islower(ip[i])) printf("%c,R%d\n", ip[i + k1], j);
+else
+printf("%c,%c\n", ip[i], ip[i + 2]);
+
+j++;
+k1 = 2;
+k = 0;
+}
+
+fclose(fp);
+ 
+return 0;
+}
+```
 
 
 ## OUTPUT 
+![442844299-18643b85-fe12-4cfa-8864-228c9fa617b9](https://github.com/user-attachments/assets/ae4f8a65-b5ea-4703-958c-a1047946596c)
+![442844399-c956a907-b115-4e55-abc7-4bb103dc7efe](https://github.com/user-attachments/assets/425c05f4-9bae-4392-9059-9b26d1d3b4d2)
 
 ## RESULT
+The back end of the compiler is implemented successfully, and the output is verified.
+
+
 The back end of the compiler is implemented successfully, and the output is verified.
