--- a/Ex06.md
+++ b/Ex06.md
@@ -17,47 +17,55 @@ To write a program to implement the back end of the compiler.
 ## PROGRAM
 ```
 #include <stdio.h>
-#include <ctype.h> 
-#include <stdlib.h>
+#include <string.h>
+
+// Define a structure for a simple IR instruction
+typedef struct {
+    char opcode[10]; // Operation code (e.g., ADD, MOV)
+    char arg1[10];   // First argument (register or variable)
+    char arg2[10];   // Second argument (register or variable)
+    char result[10]; // Result variable
+} Instruction;
+
+// Function to generate pseudo-assembly from the IR
+void generate_code(Instruction ir[], int count) {
+    printf("Generated Assembly:\n");
+    for (int i = 0; i < count; i++) {
+        if (strcmp(ir[i].opcode, "ADD") == 0) {
+            printf("    ADD %s, %s ; Store in %s\n", ir[i].arg1, ir[i].arg2, ir[i].result);
+        } else if (strcmp(ir[i].opcode, "SUB") == 0) {
+            printf("    SUB %s, %s ; Store in %s\n", ir[i].arg1, ir[i].arg2, ir[i].result);
+        } else if (strcmp(ir[i].opcode, "MOV") == 0) {
+            printf("    MOV %s, %s\n", ir[i].arg1, ir[i].result);
+        } else {
+            printf("Unknown operation: %s\n", ir[i].opcode);
+        }
+    }
+}
 
 int main() {
-int i = 2, j = 0, k = 2, k1 = 0; char ip[10], kk[10];
-FILE *fp;
-
-printf("Enter the filename of the intermediate code: "); scanf("%s", kk);
-
-fp = fopen(kk, "r"); if (fp == NULL) {
-printf("\nError in opening the file\n"); return 1;
-}
-printf("\nStatement\tTarget Code\n\n"); while (fscanf(fp, "%s", ip) != EOF) {
-printf("%s\tMOV %c,R%d SUB ", ip, ip[i + k], j);
-
-if (ip[i + 1] == '+')
-printf("ADD "); else
-printf("SUB ");
-
-if (islower(ip[i])) printf("%c,R%d\n", ip[i + k1], j);
-else
-printf("%c,%c\n", ip[i], ip[i + 2]);
-
-j++;
-k1 = 2;
-k = 0;
-}
-
-fclose(fp);
- 
-return 0;
+    // Define a simple list of IR instructions
+    Instruction ir[] = {
+        {"MOV", "R1", "", "A"},    // MOV R1 to A
+        {"ADD", "A", "B", "R2"},   // ADD A and B, store in R2
+        {"SUB", "R2", "C", "R3"},  // SUB R2 and C, store in R3
+        {"MOV", "R3", "", "D"}     // MOV R3 to D
+    };
+    
+    int ir_count = sizeof(ir) / sizeof(Instruction);
+    
+    // Generate the assembly-like code from the IR
+    generate_code(ir, ir_count);
+    
+    return 0;
 }
 ```
 
 
 ## OUTPUT 
-![442844299-18643b85-fe12-4cfa-8864-228c9fa617b9](https://github.com/user-attachments/assets/ae4f8a65-b5ea-4703-958c-a1047946596c)
-![442844399-c956a907-b115-4e55-abc7-4bb103dc7efe](https://github.com/user-attachments/assets/425c05f4-9bae-4392-9059-9b26d1d3b4d2)
+![image](https://github.com/user-attachments/assets/8487541f-510a-474a-b3af-90022270fe48)
+
 
 ## RESULT
-The back end of the compiler is implemented successfully, and the output is verified.
-
 
 The back end of the compiler is implemented successfully, and the output is verified.
